--- a/src/components/teacher/trivia/trivia.sass
+++ b/src/components/teacher/trivia/trivia.sass
@@ -1,250 +1,347 @@
-// .cabeza
-//     margin-top: -16px
-//     background: #333
-//     color: #fff
-//     display: flex
-//     height: 60px
-//     box-shadow: rgba(150, 150, 150, 0.5) 0px 2px 2px
-//     position: static
-// //  /* Hacemos que la cabecera tenga una posición fija */
-// .containerRight
-//     margin-top: 5px
-// .cuerpo 
-//     width: 100%
-//     height: 65%
+// cabecera
 
+.trivia-respuestas
+  padding: 8.5px
+  text-align: center
 
-// .cont-btn-resp 
-//     margin: auto 0 auto 15px
+.name-contenedor
+  width: 49%
+  float: left
+  margin-top: 8px
+  text-align: right
 
-// .cont-btn-resp2
-//     margin: auto 15px auto 0
+.points-contenedor
+  width: 48%
+  float: right
+  text-align: left
 
-// //  /* botones cabecera */
-// .enviar,.restaurar,.respuestas 
-//     width: 130px
-//     background: #26890c
-//     color: #fff
-//     text-decoration: none
-//     font-weight: bold
-//     font-size: 16px
-//     border: none
-//     padding: 10px 27px
-//     margin: 7px 10px 10px 10px
-//     border-radius: 5px
-//     box-shadow: inset 0 -4px rgba(0, 0, 0, .25)
-//     outline: none !important
+.triviaT-topnav
+  position: fixed
+  width: 100%
+  overflow: hidden
+  background-color: #333
+  margin-bottom: 10px
 
+  .titulo
+    float: left
+    display: block
+    text-align: center
+    font-size: 12px
+    padding: 5px 22px
 
+  .titulo-responsive
+    display: none
+    font-size: 12px
+    padding: 5px 16px
 
-// .respuestas 
-//     background: #45a3e5
-//     &:hover 
-//         background: #3086c4
-//         box-shadow: inset 0 -1px rgba(0, 0, 0, .25)
-//         margin: 9px 10px 10px 10px
-//         outline: none
+  a
+    float: right
+    display: block
+    color: white !important
+    text-align: center
+    text-decoration: none
+    font-size: 17px
 
-// .restaurar 
-//     background: #F11D0B
-//     &:hover
-//         background: rgb(197, 20, 4)
-//         box-shadow: inset 0 -1px rgba(0, 0, 0, .25)
-//         margin: 9px 10px 10px 10px
+  .triviaT-icon
+    display: none
+    font-size: 22px
+    padding: 14px 16px
 
+.triviaT-cabecera
+  margin-top: -15px
+  background: #333
+  color: #fff
+  display: flex
+  height: 60px
+  box-shadow: rgba(150, 150, 150, 0.5) 0px 2px 2px
+  position: static
+  margin-bottom: 8px
 
-// .enviar:hover
-//     background: #1e7209
-//     box-shadow: inset 0 -1px rgba(0, 0, 0, .25)
-//     margin: 9px 10px 10px 10px
+  .triviaT-cabecera-titulo
+    margin: 10px auto 1px
 
+// botones cabecera
 
-// //  /* Contenido */
-// .label
-//     margin-bottom: 0
+.contenedor-btn-enviar
+  margin: 7px
 
+.triviaT-enviar, .triviaT-restaurar
+  width: 130px
+  background: #26890c
+  color: #fff
+  text-decoration: none
+  font-weight: bold
+  font-size: 16px
+  border: none
+  padding: 10px 27px
+  margin: 7px 10px 10px 10px
+  border-radius: 5px
+  box-shadow: inset 0 -4px rgba(0, 0, 0, 0.25)
+  outline: none !important
 
-// .pregunta 
-//     width: 100%
-// //  /* Full width */
-//     padding: 9px
-// //  /* Some padding */
-//     font-size: 20px
-//     border: 2px solid gray
-// //  /* Gray border */
-//     box-sizing: border-box
-// //  /* Make sure that padding and width stays in place */
-//     margin-top: 6px
-// //  /* Add a top margin */
-//     margin-bottom: 5px
-// //  /* Bottom margin */
-//     resize: vertical
-// //  /* Allow the user to vertically resize the textarea (not horizontally) */
-//     outline: none
-//     &:focus
-//         border: 2px solid #000
+.triviaT-respuestas
+  width: 130px
+  background: #26890c
+  color: #fff
+  text-decoration: none
+  font-weight: bold
+  font-size: 16px
+  border: none
+  padding: 10px 27px
+  margin: 7px 10px 10px 10px
+  border-radius: 5px
+  box-shadow: inset 0 -4px rgba(0, 0, 0, 0.25)
+  outline: none !important
+  background: #45a3e5
 
+  &:hover
+    background: #3086c4
+    box-shadow: inset 0 -1px rgba(0, 0, 0, 0.25)
+    outline: none
 
-// .resp-grp
-//     display: flex
+.triviaT-enviar:hover
+  background: #1e7209
+  box-shadow: inset 0 -1px rgba(0, 0, 0, 0.25)
 
+.triviaT-restaurar:hover
+  background: rgb(197, 20, 4)
+  box-shadow: inset 0 -1px rgba(0, 0, 0, 0.25)
 
-// .input-tiempo
-//     margin-bottom: 18px
+.modal-general_closeTrivia
+  position: static
+  background-color: #E91E63
+  max-width: 40px
+  border: 0
+  height: 30px
+  margin: .7em
+  border-radius: 5px
+  z-index: 3
+  width: 100%
+  float: right
+  cursor: pointer
 
+  &:hover .button-zoom
+    -webkit-transform: scale(1.2)
+    transform: scale(1.2)
 
-// .image-container 
-//     display: flex
-//     height: 142px
-//     width: 99%
-//     padding: 12px
-//     border: 3px dotted #B2BABB
-//     background: #F2F4F4
-// //  /* Add a top margin */
-//     margin-bottom: 18px
-// //  /* Bottom margin */
+// media querie sin hamburguesa
+@media only screen and (max-width: 575px)
+  .triviaT-topnav
+    a
+      display: none
+      &.triviaT-icon
+        float: right
+        display: block
+    .titulo
+      float: left
+      display: block
+      text-align: center
 
+@media only screen and (max-width: 900px)
+  .name-contenedor
+    width: 100%
+    float: none
+    margin-top: 8px
+    text-align: center
+  .points-contenedor
+    width: 100%
+    float: none
+    text-align: center
 
-// .imagen
-//     margin: auto
+// media querie con hamburguesa
+@media only screen and (max-width: 575px)
+  .triviaT-topnav.responsive
+    position: fixed
+    .triviaT-icon
+      position: absolute
+      right: 0
+      top: 0
+    a
+      float: none
+      display: block
+      text-align: center
+    .titulo
+      display: none
+  .contenedor-btn-enviar
+    margin: 0
 
+// Contenido o cuerpo
+.triviaT-cuerpo
+  padding: 90px 0 0 0
 
-// .input-respuestas 
-//     width: 91%
-//     padding: 10px
-// //  /* Some padding */
-//     font-size: 20px
-//     border: 2px solid gray
-// //  /* Gray border */
-//     box-sizing: border-box
-// //  /* Make sure that padding and width stays in place */
-//     margin-top: 6px
-// //  /* Add a top margin */
-//     margin-bottom: 6px
-// //  /* Bottom margin */
-//     margin-right: 8px
-//     resize: vertical
-// //  /* Allow the user to vertically resize the textarea (not horizontally) */
-//     outline: none
+// estilos grid de row and column
+.triviaT-row:after
+  content: ""
+  display: table
+  clear: both
 
-// .respuesta:focus,
-// .respuesta2:focus 
-//     border: 2px solid #000
+[class*="triviaT-col-"]
+  float: left
+  padding: 0 15px
+  width: 100%
 
+// .triviaT-imgSalida{display: none}
 
+@media only screen and (min-width: 700px)
+  .triviaT-col-6
+    width: 50%
+  .triviaT-imgSalida
+    display: initial
 
-// .modal-respuestas 
-//     position: fixed
-//     z-index: 1
-//     padding-top: 100px
-//     left: 0
-//     top: 0
-//     width: 100%
-//     height: 100%
-//     overflow: auto
-//     background-color: rgb(0, 0, 0)
-//     background-color: rgba(0, 0, 0, 0.4)
+.triviaT-input-pregunta:focus, .triviaT-input-respuestas:focus
+  border: 2px solid #000
 
-// .modal-content-respuestas
-//     color: #aaaaaa
-//     background-color: #1C2833
-//     margin: auto
-//     padding: 20px
-//     border: 1px solid #888
-//     width: 50%
-//     min-height: 410px
+.triviaT-image-container
+  display: flex
+  height: 142px
+  width: 99%
+  padding: 12px
+  border: 3px dotted #9325b9
+  background: #F2F4F4
+  margin-bottom: 18px
 
+.imagen
+  margin: auto
+  width: 60%
 
-// .modal-body-respuestas 
-//     margin: 25px
+.triviaT-input-pregunta
+  width: 100%
+  padding: 9px
+  font-size: 20px
+  border: 2px solid gray
+  box-sizing: border-box
+  margin-top: 6px
+  margin-bottom: 5px
+  resize: vertical
+  outline: none
 
+.triviaT-contenedor-respuesta
+  display: flex
 
+.triviaT-input-tiempo
+  margin-bottom: 18px
 
-// //  /* The Close Button */
+.triviaT-input-respuestas
+  width: 91%
+  padding: 10px
+  font-size: 20px
+  border: 2px solid gray
+  box-sizing: border-box
+  margin-top: 6px
+  margin-bottom: 6px
+  margin-right: 8px
+  resize: vertical
+  outline: none
 
-// .close 
-//     color: #aaaaaa 
-//     float: right 
-//     font-size: 28px 
-//     font-weight: bold 
+// The Modal (background)
 
-// .close:hover,
-// .close:focus
-//     color: #000 
-//     text-decoration: none 
-//     cursor: pointer 
+.modal-respuestas
+  position: fixed
+  z-index: 1
+  padding-top: 100px
+  left: 0
+  top: 0
+  width: 100%
+  height: 100%
+  overflow: auto
+  background-color: rgb(0, 0, 0)
+  background-color: rgba(0, 0, 0, 0.4)
 
-// .rolldown-list
-//     text-align: left 
-//     padding: 0 
-//     margin: 0 
+.modal-content-respuestas
+  color: #aaaaaa
+  background-color: #1C2833
+  margin: auto
+  padding: 20px
+  border: 1px solid #888
+  width: 55%
+  min-height: 85%
 
-// .rolldown-list li 
-//     padding: 12px 
-//     margin-bottom: .125em 
-//     display: block 
-//     list-style: none 
-//     font-weight: bold 
-//     font-size: 20px 
-//     text-transform: uppercase 
-//     overflow: hidden 
-//     margin-top: 10px 
-//     visibility: hidden 
-//     animation: rolldown .7s 1 
-//     transform-origin: 50% 0 
-//     animation-fill-mode: forwards 
+// The Close Button
 
+.close
+  color: #aaaaaa
+  float: right
+  font-size: 28px
+  font-weight: bold
 
-// .rolldown-list li:nth-child(2n) 
-//     background-color: #444 
+  &:hover, &:focus
+    color: #000
+    text-decoration: none
+    cursor: pointer
 
+.rolldown-list
+  text-align: left
+  padding: 0
+  margin: 0
 
-// .rolldown-list li:nth-child(2n+1) 
-//     background-color: #333 
+  li
+    box-sizing: content-box
+    list-style: none
+    font-weight: bold
+    text-transform: uppercase
+    overflow: hidden
+    margin-top: 5px
+    visibility: hidden
+    animation: rolldown .7s 1
+    transform-origin: 50% 0
+    animation-fill-mode: forwards
 
+    &:nth-child(2n)
+      background-color: #444
 
-// .rolldown-list li:nth-child(2n+1) 
-//     animation-delay: 0.25s 
-//     -webkit-animation-delay: 0.25s !important 
+    &:nth-child(2n+1)
+      background-color: #333
+      animation-delay: 0.25s
+      -webkit-animation-delay: 0.25s !important
+      padding: 7px
 
-// .rolldown-list li:nth-child(2n+2) 
-//     animation-delay: 0.50s 
-//     -webkit-animation-delay: 0.50s !important 
+    &:nth-child(2n+2)
+      animation-delay: 0.50s
+      -webkit-animation-delay: 0.50s !important
 
-// .rolldown-list li:nth-child(2n+3) 
-//     animation-delay: 4s 
-//     -webkit-animation-delay: 0.75s !important 
+    &:nth-child(2n+3)
+      animation-delay: 4s
+      -webkit-animation-delay: 0.75s !important
 
-// .rolldown-list li:nth-child(2n+4) 
-//     animation-delay: 4s 
-//     -webkit-animation-delay: 1s !important 
+    &:nth-child(2n+4)
+      animation-delay: 4s
+      -webkit-animation-delay: 1s !important
 
-// .rolldown-list li:nth-child(2n+5) 
-//     animation-delay: 4s 
-//     -webkit-animation-delay: 1.25s !important 
+    &:nth-child(2n+5)
+      animation-delay: 4s
+      -webkit-animation-delay: 1.25s !important
 
+#myList
+  margin-top: 1%
 
-// #myList 
-//     position: absolute 
-//     width: 50% 
-//     left: 50% 
-//     margin-left: -25% 
+h3.trivia-respuestas
+  text-align: center
 
+.input-Trespuestas
+  width: 30px
+  padding-top: 8px
+  padding-bottom: 0
 
-// @keyframes rolldown 
-//     0% 
-//         visibility: visible 
-//         transform: rotateX(180deg) perspective(500px) 
-//     70%
-//         visibility: visible 
-//         transform: rotateX(-20deg) 
-//     100% 
-//         visibility: visible 
-//         transform: rotateX(0deg) 
-    
+@keyframes rolldown
+  0%
+    visibility: visible
+    transform: rotateX(180deg) perspective(500px)
+  70%
+    visibility: visible
+    transform: rotateX(-20deg)
+  100%
+    visibility: visible
+    transform: rotateX(0deg)
 
-
-/*clases refactorizadas*/
-.contenedor-btn-enviar 
-    .triviaT-restaurar
-        background: #F11D0B
+@media screen and (max-width: 600px)
+  .modal-respuestas .modal-content-respuestas
+    width: 80%
+  .name-contenedor
+    width: 100%
+    float: none
+    margin-top: 8px
+    text-align: center
+  .points-contenedor
+    width: 100%
+    float: none
+    text-align: center
