--- a/src/components/student/socket/socketStream.sass
+++ b/src/components/student/socket/socketStream.sass
@@ -13,11 +13,14 @@
     font-family: Opal
 
 .popup.active.scale
-    transform: scale(0.9)
+    transform: scale(1)
     opacity: 1
+    right: 10%
+
+
 
 .t
-    font-size: 25px
+    font-size: 22px
     margin: auto
     margin-top: 29px
     font-family: Opal
@@ -123,3 +126,15 @@
           stroke-dasharray:  2000
           stroke-dashoffset: 2000
     
+// .button-zoom
+//     position: absolute
+//     right: 0
+//     background-color: #E91E63
+//     max-width: 40px
+//     border: 0
+//     height: 30px
+//     margin: .7em
+//     border-radius: 5px
+//     z-index: 3
+//     width: 100%
+//     cursor: pointer
