--- a/src/components/teacher/trivia/trivia.css
+++ b/src/components/teacher/trivia/trivia.css
@@ -105,7 +105,11 @@
     box-shadow: inset 0 -1px rgba(0, 0, 0, .25);
 }
 
-.triviaT-restaurar:hover {
+/* .triviaT-respuestas {
+    background: #45a3e5;
+} */
+
+.triviaT-restaurar{
     background: rgb(197, 20, 4);
     box-shadow: inset 0 -1px rgba(0, 0, 0, .25);
 }
