--- a/src/components/teacher/trivia/trivia.sass
+++ b/src/components/teacher/trivia/trivia.sass
@@ -65,7 +65,7 @@
 .contenedor-btn-enviar
   margin: 7px
 
-.triviaT-enviar, .triviaT-restaurar
+.triviaT-enviar
   width: 130px
   background: #26890c
   color: #fff
@@ -79,9 +79,24 @@
   box-shadow: inset 0 -4px rgba(0, 0, 0, 0.25)
   outline: none !important
 
+.triviaT-restaurar
+  width: 130px
+  background: rgb(197, 20, 4)
+  color: #fff
+  text-decoration: none
+  font-weight: bold
+  font-size: 16px
+  border: none
+  padding: 10px 27px
+  margin: 7px 10px 10px 10px
+  border-radius: 5px
+  box-shadow: inset 0 -4px rgba(0, 0, 0, 0.25)
+  outline: none !important
+
+
 .triviaT-respuestas
   width: 130px
-  background: #26890c
+  // background: #26890c
   color: #fff
   text-decoration: none
   font-weight: bold
