--- a/src/view/login/login.sass
+++ b/src/view/login/login.sass
@@ -160,7 +160,6 @@
     .loginTeacher-btn
       position: relative
       box-shadow: 0 0 10px 1px #52be7f
-      margin-top: 30px
       font-family: Opal
       font-size: 15px
   .loginTeacher-form-item
@@ -343,8 +342,7 @@
 
 .loginTeacher-table-cell .input-group 
   width: 100%
-  margin: 5px
-  padding: 10px 29px
+  padding: 10px 28px 20px 28px
   display: table
   position: relative
   line-height: 1.75rem
@@ -356,8 +354,9 @@
     vertical-align: top
   & .input-group-addon
     width: 10%
+    padding: 5px 0 0 0
   & .form-control
-    width: 90%
+    width: 84%
     margin: 0  !important
     padding: 10px 15px  !important
 
