grupos alumnos activos e innactivos

--- a/src/view/courses/Course.sass
+++ b/src/view/courses/Course.sass
@@ -346,8 +346,8 @@
         background-color: #52BE7F
         color: #ffffff
         padding: .5rem
-        -webkit-transform: scale(1.05)
-        transform: scale(1.05)
+        // -webkit-transform: scale(1.05)
+        // transform: scale(1.05)
     & .courseTeacher__buttonEntry-label 
         width: 150px
         cursor: pointer
