--- a/src/view/courses/cardCourses.sass
+++ b/src/view/courses/cardCourses.sass
@@ -1,3 +1,12 @@
+.button-zoom
+        transition: transform 0.3s ease-in-out
+        -webkit-transition: all .4s ease
+        -moz-transition: all .4s ease
+        -o-transition: all .4s ease
+        -ms-transition: all .4s ease
+        &:hover
+            -webkit-transform: scale(1.20)
+            transform: scale(1.20)
 .classTeacher-card__image
     position: absolute
     width: 100%
