--- a/src/components/student/Header/HeaderContainer.sass
+++ b/src/components/student/Header/HeaderContainer.sass
@@ -91,7 +91,7 @@
     .alumnoH-header 
         .alumnoHeader-nav
             width: 100%
-            background: -webkit-linear-gradient(left,#5D00FF, #007bff)
+            background: webkit-linear-gradient(left,#5D00FF, #007bff)-
             max-height: 0
             overflow: hidden
 
