--- a/src/components/student/temporizador/temporizador.sass
+++ b/src/components/student/temporizador/temporizador.sass
@@ -5,6 +5,8 @@
   font-style: normal
 .temporizador
   text-align: center
+  .tamano
+    margin-top: 13%
   .counter_part
     display: inline-block
     line-height: initial
