--- a/src/view/class/ClassDetail/ClassDetail.sass
+++ b/src/view/class/ClassDetail/ClassDetail.sass
@@ -42,6 +42,7 @@
                     letter-spacing: 2px
                     text-transform: uppercase
                 .Item-card__text
+                    color: #000000
                     flex: 1 1 auto
                     font-size: 0.875rem
                     line-height: 1.5
