--- a/src/view/index/inicio.sass
+++ b/src/view/index/inicio.sass
@@ -183,11 +183,11 @@
     .login-house
         display: none
     .login-students
-        margin-block-start: 0
+        margin-block-start: 8px
     .login-profesora
-        margin-block-start: 0
-    login-parents
-        margin-block-start: 0
+        margin-block-start: 8px
+    .login-parents
+        margin-block-start: 8px
 
 
 @media (max-width: 600px)
