--- a/src/view/login.Stud/ingresarCodigo.sass
+++ b/src/view/login.Stud/ingresarCodigo.sass
@@ -91,6 +91,7 @@
 .enter-code__button
     background: #333333
     border-style: none
+    margin-top: 17px
     width: 100%
     height: 50px
     padding: 5px
