--- a/src/components/student/Header/HeaderContainer.css
+++ b/src/components/student/Header/HeaderContainer.css
@@ -193,8 +193,9 @@ li.alumnoHeader-li .ft:hover{
         padding: 10px;
         background: #52BE7F;
         color: white;
-        margin-left: 40px;
+        /*margin-left: 40px;*/
         display: block;
+        width: 100%;
     }
     
    
@@ -207,6 +208,16 @@ li.alumnoHeader-li .ft:hover{
         background: white;
         color: #52BE7F;
         height: 55%;
+    }
+    .alumnoH-header .alumnoHeader-nav .alumnoHeader-li .alumnoHeader-nav .alumnoHeader-li:hover .alumnoHeader-a {
+        /* background: rgb(194, 194, 194); */
+        background: white;
+        color: red;
+        transition: 0.5s;
+    }
+    .alumnoH-header .alumnoHeader-nav .alumnoHeader-li:hover .alumnoHeader-a{
+        margin-bottom: 0px; 
+        margin-top: 0px;
     }
 
 }
