azar sonido, trivia modals

--- a/src/components/student/trivia/Trivia.sass
+++ b/src/components/student/trivia/Trivia.sass
@@ -252,3 +252,8 @@
         z-index: 1
     .primercontenedor
         display: block
+@media screen and (min-height: 780px)
+    .trivia-student-button
+        .triviaStudentText
+            p
+                margin: 20px 0 20px 110px
