--- a/src/components/teacher/trivia/trivia.sass
+++ b/src/components/teacher/trivia/trivia.sass
@@ -360,3 +360,22 @@ h3.trivia-respuestas
     width: 100%
     float: none
     text-align: center
+@media only screen and (min-height: 750px) 
+    /* For desktop: */
+    .triviaT-col-6 
+      width: 100%
+    .triviaT-image-container 
+      height: 88px
+    .triviaT-imgSalida 
+      height: 77px
+      margin-top: -10px
+    .triviaT-cuerpo 
+      padding: 76px 0 0 0
+    .triviaT-input-respuestas
+      width: 95%
+@media only screen and (max-width: 700px) 
+    /* For desktop: */
+    .triviaT-col-6 
+      width: 50%
+    .triviaT-imgSalida
+      display: initial
