--- a/src/view/class/ClassDetail/ClassDetail.sass
+++ b/src/view/class/ClassDetail/ClassDetail.sass
@@ -1,3 +1,9 @@
+.Item-card_createquestion
+    .triviaRepuestas
+        color: black
+        float: left
+    .triviaPregunta
+        color: black
 .contenedor-Items
     color: #ffffff
     font-family: "Opal"
