estilos de banco de pregunta

--- a/src/view/class/ClassDetail/ClassDetail.sass
+++ b/src/view/class/ClassDetail/ClassDetail.sass
@@ -2,8 +2,10 @@
     .triviaRepuestas
         color: black
         float: left
+        font-size: 17px
     .triviaPregunta
         color: black
+        font-size: 24px
     .showResponsive
         max-height: 100em !important
 .contenedor-Items
