--- a/src/components/student/trivia/Trivia.sass
+++ b/src/components/student/trivia/Trivia.sass
@@ -19,10 +19,14 @@
     height: auto
     min-height: 65px
 
+.contendorDeBotonesRespuesta
+    width: 50%
+    float: left
+
 .contenedorsecundario
     width: 100%
 .header2
-    top: 57px
+    top: 55px
     width: 100%
     display: flex
     flex-direction: column
@@ -132,6 +136,9 @@
 .verde
     background: #1FAD18
     
+.contendorDeBotonesRespuestaR
+    float: right
+    width: 50%
 .contendorDeBotonesRespuesta
     padding: 0px
 
@@ -242,6 +249,12 @@
         height: 200px
     .trivia-student-button img  
         width: 40px
+    .triviaT-row
+        margin-top: 10px
+    .contendorDeBotonesRespuesta
+        width: 100%
+    .contendorDeBotonesRespuestaR
+        width: 100%
 
 @media screen and (max-width: 800px)
     .trivia-student-center
@@ -253,8 +266,19 @@
         z-index: 1
     .primercontenedor
         display: block
-@media screen and (min-height: 780px)
+    // .triviaT-row
+    //     margin-top: 10px    
+    // .trivia-student-center
+    //     width: 660px    
+    //     height: 350px
+
+@media only screen and (min-height: 650px)
     .trivia-student-button
         .triviaStudentText
             p
                 margin: 20px 0 20px 110px
+    .triviaT-row
+        margin-top: 10px
+    .trivia-student-center
+        width: 660px    
+        height: 350px
