--- a/src/components/teacher/whiteboard/board.sass
+++ b/src/components/teacher/whiteboard/board.sass
@@ -313,6 +313,36 @@
         width: 35%
 @media only screen and (max-width: 1200px)
     .p5Canvas
+        width: 900px !important
+        height: 450px !important
+        left: calc(50% - 450px)
+    
+    .divSketch
+        width: 1100px
+        left: calc(50% - 550px)
+        .canvasBoard
+            width: 900px
+        .divCuadro
+            .ulOptions
+                li
+                    width: 50%
+@media only screen and (max-width: 1100px)
+    .p5Canvas
+        width: 800px !important
+        height: 400px !important
+        left: calc(50% - 400px)
+    
+    .divSketch
+        width: 1000px
+        left: calc(50% - 500px)
+        .canvasBoard
+            width: 800px
+        .divCuadro
+            .ulOptions
+                li
+                    width: 50%
+@media only screen and (max-width: 1000px)
+    .p5Canvas
         width: 700px !important
         height: 350px !important
         left: calc(50% - 350px)
