chat working full

--- a/src/components/teacher/footer/FooterContainer.sass
+++ b/src/components/teacher/footer/FooterContainer.sass
@@ -1,5 +1,6 @@
 //Caja Principal
-.footer-distributed 
+.footer-distributed
+    overflow : hidden
     background: #1C59AA
     color: white
     display: flex
