--- a/src/view/class/ClassDetail/ClassDetail.sass
+++ b/src/view/class/ClassDetail/ClassDetail.sass
@@ -11,6 +11,7 @@
 .QuestionsListClass
     list-style: none
     margin-left: -18px
+    float: rigth
 .QuestionsCards    
     color: black
     margin-top: 10px
@@ -18,6 +19,11 @@
     padding: 18px 5px
     margin-left: -20px
     text-align: left
+    word-wrap: break-word
+.Questions-ListCards
+    list-style: none
+
+
     .classTrivia__button-Edit,
     .classTrivia__button-delette
         min-width: 30px
@@ -90,6 +96,14 @@
                     font-weight: 300
                     letter-spacing: 2px
                     text-transform: uppercase
+                .Item-card__textTrivia
+                    color: #000000
+                    flex: 1 1 auto
+                    font-size: 0.875rem
+                    line-height: 1.5
+                    margin-bottom: 1.25rem
+                    height: 500px
+                    overflow-y: scroll
                 .Item-card__text
                     color: #000000
                     flex: 1 1 auto
