--- a/src/components/teacher/whiteboard/board.sass
+++ b/src/components/teacher/whiteboard/board.sass
@@ -4,7 +4,7 @@
     left: calc(50% - 500px)
     top: 10px
     max-width: 1000px
-    height: 500px
+    max-height: 500px
     width: 100%
     touch-action: none
 
@@ -157,6 +157,9 @@
             & .sombreado
                 background-color: #D6D6D6
                 border-radius: 8px
+.boardStudent
+    width: 1000px
+    left: calc(50% - 500px)
 
 .divPalette
     position: relative
@@ -326,6 +329,9 @@
             .ulOptions
                 li
                     width: 50%
+    & .boardStudent
+        width: 900px
+        left: calc(50% - 450px)
 @media only screen and (max-width: 1100px)
     .p5Canvas
         width: 800px !important
@@ -341,6 +347,9 @@
             .ulOptions
                 li
                     width: 50%
+    & .boardStudent
+        width: 800px
+        left: calc(50% - 400px)
 @media only screen and (max-width: 1000px)
     .p5Canvas
         width: 700px !important
@@ -356,6 +365,9 @@
             .ulOptions
                 li
                     width: 50%
+    & .boardStudent
+        width: 700px
+        left: calc(50% - 350px)
 
 @media only screen and (max-width: 900px)
     .p5Canvas
@@ -374,6 +386,10 @@
             .ulOptions
                 li
                     width: 50%
+    & .boardStudent
+        width: 500px
+        left: calc(50% - 250px)
+
 @media only screen and (max-width: 700px)
     .p5Canvas
         width: 400px !important
@@ -387,6 +403,9 @@
         .divCuadro
             overflow: auto
             height: 200px
+    & .boardStudent
+        width: 400px
+        left: calc(50% - 200px)
 @media only screen and (max-width: 600px)
     .p5Canvas
         width: 350px !important
@@ -400,6 +419,9 @@
         .divCuadro
             overflow: auto
             height: 175px
+    & .boardStudent
+        width: 350px
+        left: calc(50% - 175px)
 @media only screen and (max-width: 550px)
     .p5Canvas
         width: 300px !important
@@ -413,6 +435,9 @@
         .divCuadro
             overflow: auto
             height: 150px
+    & .boardStudent
+        width: 300px
+        left: calc(50% - 150px)
 @media only screen and (max-width: 500px)
     .p5Canvas
         width: 250px !important
@@ -426,6 +451,9 @@
         .divCuadro
             overflow: auto
             height: 125px
+    & .boardStudent
+        width: 250px
+        left: calc(50% - 125px)
 @media only screen and (max-width: 450px)
     .p5Canvas
         width: 400px !important
