cambios estilos trivia

--- a/src/components/student/trivia/Trivia.sass
+++ b/src/components/student/trivia/Trivia.sass
@@ -220,7 +220,7 @@
     position: fixed
     top: 0
     left: 0
-    height: 100vh
+    height: 100%
     width: 100%
     transition: all .5s
 
@@ -255,6 +255,8 @@
         width: 100%
     .contendorDeBotonesRespuestaR
         width: 100%
+    .contenedorPrincipal
+        position: absolute
 
 @media screen and (max-width: 800px)
     .trivia-student-center
