--- a/src/components/teacher/whiteboard/board.sass
+++ b/src/components/teacher/whiteboard/board.sass
@@ -7,8 +7,13 @@
     max-height: 500px
     width: 100%
     touch-action: none
-
-
+.inputFile-board
+    width: 24px
+    height: 24px
+    opacity: 0
+    overflow: hidden
+    position: absolute
+    cursor: pointer
 // .textoinput
 //     position: fixed
 //     border: solid red
